# tree-sitter-zoomba

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  scratch.txt  scratch.zm  setup.py  tree-sitter.json
bindings/c/: tree-sitter-zoomba.h  tree-sitter-zoomba.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zoomba/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZoombaTests/: TreeSitterZoombaTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: function.txt  statements.txt
tests/corpus/: statements.txt
